# simple_bulletin

./: .gitignore  Cargo.toml  README.md  simple_bulletin.db
entities/: Cargo.toml
entities/src/: adverts.rs  groups.rs  groups_permissions.rs  mod.rs  permissions.rs  prelude.rs  users.rs  users_adverts.rs  users_groups.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users.rs  m20240822_113126_create_permissions.rs  m20240822_184202_add_adverts.rs  m20240824_133428_add_active_user.rs  main.rs
migrations/: 20240412113345_init.up.sql  20240412185357_permissions.up.sql  20240414162632_adverts.down.sql  20240414162632_adverts.up.sql  20240415125625_active_user.up.sql
server/: Cargo.toml
server/migrations/: 20240412113345_init.down.sql  20240412113345_init.up.sql  20240412185357_permissions.down.sql  20240415125625_active_user.down.sql
server/src/: auth.rs  auth_models.rs  db.rs  db_orm.rs  main.rs  models.rs  newadmin.rs  newuser.rs
server/src/routes/: auth.rs  item.rs  main_page.rs  moderator.rs  profile.rs
server/templates/: base.html  item.html  item_new.html  main.html  profile.html
src/: auth.rs  db.rs  main.rs  models.rs  newadmin.rs  newuser.rs  routes.rs
src/routes/: auth.rs  graphql.rs  item.rs  main_page.rs  mod.rs  moderator.rs  profile.rs
templates/: base.html  item.html  item_new.html  login.html  main.html  mod.html  moderator.html  profile.html  register.html
